<resources>
    <string name="app_name">Livres</string>
    <string name="cr_e_ton_compte">Crée ton compte</string>
    <string name="pseudo">Pseudo</string>
    <string name="d_j_utilisateur_connecte_toi">Déjà utilisateur ? Connecte-toi</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="creer_mon_compte">CREER MON COMPTE</string>
    <string name="connecte_toi">Connecte toi</string>
    <string name="me_connecter">Me connecter</string>
    <string name="veuillez_remplir_les_champs_pour_continuer">Veuillez remplir tout les champs pour continuer</string>
    <string name="nom_du_livre">Nom du livre</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="titre_du_livre">Titre du livre</string>
    <string name="resume">Résumé</string>
    <string name="name">Name</string>
    <string name="auteur">Auteur</string>
    <string name="envoy">Envoyé</string>
    <string name="resum">Résumé</string>
    <string name="titre">Titre</string>
</resources>
